# task-scheduler

./: .gitignore  CMakeLists.txt  README.md
ParallelCUDA/: config.json  main.cu  scheduler.exp  scheduler.lib
ParallelCUDA/html/: annotated.html  annotated_dup.js  classbasic__json.html  classbyte__container__with__subtype-members.html  classdetail_1_1binary__reader-members.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1iteration__proxy-members.html  classdetail_1_1iterator__input__adapter.html  classdetail_1_1json__ref.html  classdetail_1_1json__reverse__iterator.html  classdetail_1_1json__sax__acceptor.html  classdetail_1_1json__sax__dom__callback__parser-members.html  classdetail_1_1lexer.html  classdetail_1_1out__of__range-members.html  classdetail_1_1output__adapter-members.html  classdetail_1_1output__vector__adapter-members.html  classdetail_1_1output__vector__adapter.html  classdetail_1_1parse__error.html  classdetail_1_1parser.html  classdetail_1_1serializer-members.html  classdetail_1_1serializer.html  classes.html  classjson__pointer.html  classstd_1_1tuple__element_3_01_n_00_01_1_1nlohmann_1_1detail_1_1iteration__proxy__value_3_01_iterator_type_01_4_01_4-members.html  deprecated.html  doxygen_crawl.html  functions.html  functions_c.html  functions_d.html  functions_f.html  functions_func_e.html  functions_func_g.html  functions_func_h.html  (+97 more)
ParallelOpenMP/: config.json  main.cpp
Sequential/: config.json  main.cpp
data/: data.txt
scripts/: generate_data.py
src/: config.json  main.cpp
(+408 files in other folders)
